Completed step 1, creating the interaction graph

--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -63,7 +63,7 @@
         "outputId": "76e79e99-a6e5-4cf0-bde5-b4d5224bc991",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 55
         }
       },
       "source": [
@@ -88,9 +88,9 @@
         "colab_type": "text"
       },
       "source": [
-        "**Data class**\n",
+        "**DataReader class**\n",
         "\n",
-        "The Data class is a utility class that will help loading the data, compute useful properties of the data and create sample batches."
+        "The DataReader class is a utility class that will help loading the data, compute useful properties of the data and create sample batches."
       ]
     },
     {
@@ -101,7 +101,7 @@
         "colab": {}
       },
       "source": [
-        "class Data(object):\n",
+        "class DataReader(object):\n",
         "  def __init__(self, path='./drive/My Drive/RP_data', batch_size=100):\n",
         "    self.path = path\n",
         "    self.batch_size = batch_size\n",
@@ -198,8 +198,8 @@
       },
       "source": [
         "# small test to verify whether we can load data\n",
-        "data = Data(data_path, 10)\n",
-        "data.sample()"
+        "dataReader = DataReader(data_path, 10)\n",
+        "dataReader.sample()"
       ],
       "execution_count": 9,
       "outputs": [
@@ -272,7 +272,9 @@
         "colab_type": "text"
       },
       "source": [
-        "First we need to install torch_geometric. This is a geometric deep learning extension library for PyTorch."
+        "**Importing torch_geometric 1.3.2**\n",
+        "\n",
+        "`torch_geometric` is a geometric deep learning extension library for PyTorch. We don't use the latest version (loaded by default by google colab) due to inconsistencies with PyTorch. This also means we have to downgrade a few other packages aswell."
       ]
     },
     {
@@ -280,55 +282,28 @@
       "metadata": {
         "id": "m23H3JzIjE8E",
         "colab_type": "code",
-        "outputId": "06d247b6-bb4a-4527-8510-991baab3ba1b",
+        "outputId": "790e1520-b96f-42ff-c742-4b7a5c81171d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 453
+          "height": 146
         }
       },
       "source": [
         "pip install torch===1.2.0 torchvision===0.4.0 -f https://download.pytorch.org/whl/torch_stable.html"
       ],
-      "execution_count": 10,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Looking in links: https://download.pytorch.org/whl/torch_stable.html\n",
-            "Collecting torch===1.2.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/30/57/d5cceb0799c06733eefce80c395459f28970ebb9e896846ce96ab579a3f1/torch-1.2.0-cp36-cp36m-manylinux1_x86_64.whl (748.8MB)\n",
-            "\u001b[K     |████████████████████████████████| 748.9MB 18kB/s \n",
-            "\u001b[?25hCollecting torchvision===0.4.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/06/e6/a564eba563f7ff53aa7318ff6aaa5bd8385cbda39ed55ba471e95af27d19/torchvision-0.4.0-cp36-cp36m-manylinux1_x86_64.whl (8.8MB)\n",
-            "\u001b[K     |████████████████████████████████| 8.8MB 38.7MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torch===1.2.0) (1.18.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision===0.4.0) (1.12.0)\n",
+            "Requirement already satisfied: torch===1.2.0 in /usr/local/lib/python3.6/dist-packages (1.2.0)\n",
+            "Requirement already satisfied: torchvision===0.4.0 in /usr/local/lib/python3.6/dist-packages (0.4.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torch===1.2.0) (1.18.1)\n",
             "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision===0.4.0) (7.0.0)\n",
-            "Installing collected packages: torch, torchvision\n",
-            "  Found existing installation: torch 1.4.0\n",
-            "    Uninstalling torch-1.4.0:\n",
-            "      Successfully uninstalled torch-1.4.0\n",
-            "  Found existing installation: torchvision 0.5.0\n",
-            "    Uninstalling torchvision-0.5.0:\n",
-            "      Successfully uninstalled torchvision-0.5.0\n",
-            "Successfully installed torch-1.2.0 torchvision-0.4.0\n"
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision===0.4.0) (1.12.0)\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "torch"
-                ]
-              }
-            }
-          },
-          "metadata": {
-            "tags": []
-          }
         }
       ]
     },
@@ -367,7 +342,7 @@
         "outputId": "07603d69-bfc6-4157-ab53-d960e5fa8887",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 562
+          "height": 582
         }
       },
       "source": [
@@ -428,7 +403,7 @@
       },
       "source": [
         "import torch\n",
-        "import torch_geometric"
+        "import torch_geometric\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -466,9 +441,9 @@
         "colab_type": "text"
       },
       "source": [
-        "First we create an interaction graph. \n",
+        "**Creating the interaction graph**\n",
         "\n",
-        "*(todo: this is just a simple design that probably needs to be tweaked such that it matches the format of the torch_geometric library)*"
+        "First we create an interaction graph. The Data object from torch_geometric represents a graph structure, and as such, we should create one given our data."
       ]
     },
     {
@@ -476,40 +451,79 @@
       "metadata": {
         "id": "u9VJLYk9KvHg",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 110
-        },
-        "outputId": "1bd353d4-2270-4060-f45a-6c199c370b0d"
+        "colab": {}
       },
       "source": [
-        "# first we want to create an interaction graph.\n",
+        "from torch_geometric.data import Data\n",
         "\n",
         "# get data\n",
         "batch_length = 10\n",
-        "data = Data()\n",
-        "\n",
+        "dataReader = DataReader()\n",
         "edges = []\n",
         "# define an edge for every user and item\n",
-        "for user in range(data.n_users):\n",
-        "  pos_items = data.train_items[user]\n",
+        "for user in range(dataReader.n_users):\n",
+        "  pos_items = dataReader.train_items[user]\n",
         "  for item in pos_items:\n",
-        "    edges.append((user, item))\n",
+        "    # increase the item id by the number of users to distinct the nodes from users\n",
+        "    edges.append([user, item + dataReader.n_users])\n",
+        "    edges.append([item + dataReader.n_users, user])\n",
         "\n",
-        "print(len(edges))\n",
-        "print(data.n_users)\n",
-        "print(data.n_items)\n",
-        "print(edges[0:100])"
+        "# following example from https://pytorch-geometric.readthedocs.io/en/latest/notes/introduction.html\n",
+        "edge_index = torch.tensor(edges, dtype=torch.long).t().contiguous()\n",
+        "\n",
+        "# we can extend x with any number of features we want.\n",
+        "# for now, we only have it include its corresponding userid or itemid, but we might want to extend this\n",
+        "x = torch.tensor(list(range(dataReader.n_users)) + list(range(dataReader.n_items)), dtype=torch.long)\n",
+        "\n",
+        "# data is a representation of the directed graph\n",
+        "data = Data(x=x, edge_index=edge_index)\n",
+        "\n"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mLD-yhQHDHel",
+        "colab_type": "text"
+      },
+      "source": [
+        "Data is a representation of our interaction graph"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pBcxk1KyA9zn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        },
+        "outputId": "d9f3c775-3312-475e-ed66-0992d7637d57"
+      },
+      "source": [
+        "# torch_geometric.data.Data provides a number of utility functions\n",
+        "# these prints are a check to verify if our graph seems valid\n",
+        "print(data.is_undirected())\n",
+        "print(data.is_directed())\n",
+        "print(data.num_edges)\n",
+        "print(data.num_nodes)\n",
+        "print(data.contains_isolated_nodes())\n",
+        "print(data.contains_self_loops())"
+      ],
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2380706\n",
-            "52642\n",
-            "91598\n",
-            "[(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (0, 10), (0, 11), (0, 12), (0, 13), (0, 14), (0, 15), (0, 16), (0, 17), (0, 18), (0, 19), (0, 20), (0, 21), (0, 22), (0, 23), (0, 24), (0, 25), (0, 26), (0, 27), (0, 28), (0, 29), (0, 30), (0, 31), (0, 32), (0, 33), (0, 34), (0, 35), (0, 36), (0, 37), (0, 38), (0, 39), (0, 40), (0, 41), (0, 42), (0, 43), (0, 44), (0, 45), (0, 46), (0, 47), (0, 48), (0, 49), (0, 50), (0, 51), (0, 52), (1, 53), (1, 54), (1, 49), (1, 55), (1, 56), (1, 57), (1, 58), (1, 59), (1, 60), (1, 61), (1, 62), (1, 63), (1, 64), (1, 65), (1, 66), (1, 67), (1, 68), (1, 69), (1, 70), (1, 71), (1, 72), (1, 73), (1, 74), (1, 26), (1, 75), (1, 76), (1, 77), (1, 78), (1, 79), (1, 80), (1, 81), (1, 82), (1, 83), (1, 14), (1, 84), (1, 85), (1, 86), (1, 87), (1, 88), (1, 89), (1, 90), (1, 91), (1, 92), (1, 93), (1, 94), (1, 95), (1, 96)]\n"
+            "True\n",
+            "False\n",
+            "4761412\n",
+            "144240\n",
+            "False\n",
+            "False\n"
           ],
           "name": "stdout"
         }
@@ -527,18 +541,54 @@
         "\n",
         "$m_{u \\leftarrow i} = \\dfrac{1}{\\sqrt{|N_u||N_i|}} (W_1 e_i + W_2(e_i \\odot e_u))$\n",
         "\n",
-        "Where $N_u, N_i$ are the first hop neighbors of $u$ and $i$."
+        "Where $N_u, N_i$ are the first hop neighbors of $u$ and $i$, $W_1, W_2$ are trainable weight matrices to distill useful information for propagation, and $e_i$ and $e_u$ are embeddings of the users and items."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "krx6lfTGEqB7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Message passing, constructing and aggregation aswell as training neural networks is all included in the `torch_geometric` package.\n",
+        "\n",
+        "\n",
+        "https://pytorch-geometric.readthedocs.io/en/latest/modules/nn.html"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hw-Ra9oKSwED",
+        "id": "8fbSwP8zEsbI",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "for userid in "
+        "from torch_geometric.nn import MessagePassing"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S4xtsOWbHSkO",
+        "colab_type": "text"
+      },
+      "source": [
+        "**todo: it is not entirely clear for me how to set the initial embeddings from the given data. according to the paper the \"embedding table serves as an initial state for user embeddings and item embeddings to be optimized in an end-to-end fashion\"**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7HZvQZG9H2bb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
