Update the practical outline

--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -70,7 +70,7 @@
         "drive.mount('/content/drive')\n",
         "data_path = './drive/My Drive/RP_data'"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "dataReader = DataReader(data_path, 10)\n",
         "dataReader.sample()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,12 +227,23 @@
       },
       "source": [
         "#The steps to take\n",
-        "As a rough outline, we can sketch the steps to be taken to train a Neural Graph Collaborative Filtering system as follows. \n",
-        "1. Create a user-item interaction graph from our data.\n",
-        "2. Perform message constructing by implementing the message passing formula, which defines the relations between users and items. We then use message aggregation to create a representation for each user, which defines our first-order propagation. \n",
-        "3. Use the representations from the first order-representation to create higher order representations.\n",
-        "4. Use embeddings obtained from our L layers to train a neural network, using theory about graph neural networks.\n",
-        "5. Make a prediction on our test sets and measure the recall and normalized discounted cumulative gain (ndcg), which should produce a table.\n"
+        "As a rough outline, we can sketch the steps to be taken to train a Neural Graph Collaborative Filtering system as follows.\n",
+        "\n",
+        "1. Implement the NGCF model\n",
+        "  1. Create a user-item interaction graph from our data.\n",
+        "  1. The message passing/aggregation can be done in matrix form for each step l. For this, we have to compute the adjecency matrix.\n",
+        "1. Train all the parameters\n",
+        "  1. Construct the matrices W1_l, W2_l and E_l for each step l, initialize them with the Xavier Initializer.\n",
+        "  1. Sample a batch from the training data. Apply L steps of message passing, and save all the matrices W1_{1..L}, W2_{1..L}, E_{1..L}, repeat until all training data are sampled once.\n",
+        "  1. Construct the final embeddings for each user and item, by concatenating the embeddings for a user or item from each step, so **e_u** = **e_u^1** || ... || **e_u^L**\n",
+        "  1. Using the final embeddings, compute the prediction for each (user, item) pair, and compute the BPR loss.\n",
+        "  1. Use the BPR loss to update the matrices W1 and W2, repeat until <amount> epochs are done.\n",
+        "1. Generate the test output, compute recall and ndgc, compare them to the Table 3\n",
+        "  1. Use the trained matrices W1 and W2 to find the prediction values for each (user, item) pair in the test data.\n",
+        "  1. Compute the recall and normalized discounted cumulative gain (ndgc)\n",
+        "\n",
+        "Since we have to compare results for step l, and the final embeddings are calculated by concatenation over the steps, we can simply perform all L steps (4 in this case), and then do the analysis over subsets of the W1 and W2 matrices.\n",
+        "\n"
       ]
     },
     {
@@ -291,7 +302,7 @@
       "source": [
         "pip install torch===1.2.0 torchvision===0.4.0 -f https://download.pytorch.org/whl/torch_stable.html"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +334,7 @@
         "# we use torch version 1.2.0 instead of the latest due to dependency errors\n",
         "print(torch.__version__)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +365,7 @@
         "!pip install torch-spline-conv==1.1.0\n",
         "!pip install torch-geometric==1.3.2"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +434,7 @@
         "# verify that torch geometric is imported, should be 1.3.2\n",
         "print(torch_geometric.__version__)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,11 +508,11 @@
       "metadata": {
         "id": "pBcxk1KyA9zn",
         "colab_type": "code",
+        "outputId": "d9f3c775-3312-475e-ed66-0992d7637d57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 126
-        },
-        "outputId": "d9f3c775-3312-475e-ed66-0992d7637d57"
+        }
       },
       "source": [
         "# torch_geometric.data.Data provides a number of utility functions\n",
@@ -513,7 +524,7 @@
         "print(data.contains_isolated_nodes())\n",
         "print(data.contains_self_loops())"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
