Initialize weights according to our data. Dumped an example of usage of message passing for spammer detection taken from some blog post

--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -540,8 +540,7 @@
         "from torch_geometric.data import Data\n",
         "\n",
         "# get data\n",
-        "batch_length = 10\n",
-        "dataReader = DataReader()\n",
+        "dataReader = DataReader(batch_size=100)\n",
         "edges = []\n",
         "# define an edge for every user and item\n",
         "for user in range(dataReader.n_users):\n",
@@ -615,43 +614,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KDlCsjl7Spjl",
+        "id": "rsWQW24mC23O",
         "colab_type": "text"
       },
       "source": [
-        "# step 2\n",
-        "For each user-item pair (u,i), we define the message from i to u as\n",
-        "\n",
-        "$m_{u \\leftarrow i} = \\dfrac{1}{\\sqrt{|N_u||N_i|}} (W_1 e_i + W_2(e_i \\odot e_u))$\n",
-        "\n",
-        "Where $N_u, N_i$ are the first hop neighbors of $u$ and $i$, $W_1, W_2$ are trainable weight matrices to distill useful information for propagation, and $e_i$ and $e_u$ are embeddings of the users and items."
+        "# step 2"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "krx6lfTGEqB7",
-        "colab_type": "text"
-      },
-      "source": [
-        "Message passing, constructing and aggregation aswell as training neural networks is all included in the `torch_geometric` package.\n",
-        "\n",
-        "\n",
-        "https://pytorch-geometric.readthedocs.io/en/latest/modules/nn.html"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8fbSwP8zEsbI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from torch_geometric.nn import MessagePassing"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -660,7 +628,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**todo: it is not entirely clear for me how to set the initial embeddings from the given data. according to the paper the \"embedding table serves as an initial state for user embeddings and item embeddings to be optimized in an end-to-end fashion\"**"
+        "First we initialize the initial weights and embeddings. This is performed by [Xavier initialization](http://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf)."
       ]
     },
     {
@@ -694,12 +662,12 @@
         "  return torch.Tensor(m, h).uniform_(-1, 1)*math.sqrt(6./(m+h))\n",
         "\n",
         "class NGCF(object):\n",
-        "  def __init__(self, data_config):\n",
-        "    self.n_users = data_config['n_users']\n",
-        "    self.n_items = data_config['n_items']\n",
-        "    self.emb_dim = 64\n",
-        "    self.weight_size = [64, 64, 64, 64]\n",
-        "    self.n_layers = 4\n",
+        "  def __init__(self, n_users, n_items, emb_dim=64, n_layers=4):\n",
+        "    self.n_users = n_users\n",
+        "    self.n_items = n_items\n",
+        "    self.emb_dim = emb_dim\n",
+        "    self.weight_size = list(np.repeat(emb_dim, n_layers))\n",
+        "    self.n_layers = n_layers\n",
         "\n",
         "  def _init_weights(self):\n",
         "    all_weights = dict()\n",
@@ -726,28 +694,73 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 92
+          "height": 74
         },
-        "outputId": "4151a73e-4773-4f3b-db70-a0bfb817b234"
+        "outputId": "a371358f-f58f-40e3-93cf-7d2559311eab"
       },
       "source": [
-        "# small test\n",
-        "data_config = {'n_users': 2, 'n_items':4}\n",
-        "ncfg_obj = NGCF(data_config=data_config)\n",
-        "print(ncfg_obj._init_weights().keys())\n",
-        "print(len(ncfg_obj._init_weights()))"
+        "# set initial weight\n",
+        "# emd_dim and n_layers can be tweaked to our liking\n",
+        "ncfg_obj = NGCF(n_users=dataReader.n_users, n_items=dataReader.n_items, emb_dim=64, n_layers=4)\n",
+        "\n",
+        "# store all our initial weights in some dict object\n",
+        "ncfg_weights = ncfg_obj._init_weights()\n",
+        "\n",
+        "# optional prints: check the amount of user embeddings as a verification\n",
+        "print(ncfg_weights.keys())\n",
+        "print(len(ncfg_weights['user_embedding']))"
       ],
-      "execution_count": 28,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "dict_keys(['user_embedding', 'item_embedding', 'W_gc_0', 'b_gc_0', 'W_bi_0', 'b_bi_0', 'W_mlp_0', 'b_mlp_0', 'W_gc_1', 'b_gc_1', 'W_bi_1', 'b_bi_1', 'W_mlp_1', 'b_mlp_1', 'W_gc_2', 'b_gc_2', 'W_bi_2', 'b_bi_2', 'W_mlp_2', 'b_mlp_2', 'W_gc_3', 'b_gc_3', 'W_bi_3', 'b_bi_3', 'W_mlp_3', 'b_mlp_3'])\n",
-            "26\n",
-            "ERROR! Session/line number was not unique in database. History logging moved to new session 61\n"
+            "52642\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "krx6lfTGEqB7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Message passing, constructing and aggregation aswell as training neural networks is all included in the `torch_geometric` package.\n",
+        "\n",
+        "\n",
+        "https://pytorch-geometric.readthedocs.io/en/latest/modules/nn.html"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8fbSwP8zEsbI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from torch_geometric.nn import MessagePassing"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KDlCsjl7Spjl",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "For each user-item pair (u,i), we define the message from i to u as\n",
+        "\n",
+        "$m_{u \\leftarrow i} = \\dfrac{1}{\\sqrt{|N_u||N_i|}} (W_1 e_i + W_2(e_i \\odot e_u))$\n",
+        "\n",
+        "Where $N_u, N_i$ are the first hop neighbors of $u$ and $i$, $W_1, W_2$ are trainable weight matrices to distill useful information for propagation, and $e_i$ and $e_u$ are embeddings of the users and items."
       ]
     },
     {
@@ -758,7 +771,47 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# this is a direct copy paste from https://towardsdatascience.com/hands-on-graph-neural-networks-with-pytorch-pytorch-geometric-359487e221a8\n",
+        "# it can probably be deleted as a whole, but I copied it here as inspiration\n",
+        "# todo: update according to our own criteria\n",
+        "\n",
+        "from torch.nn import Sequential as Seq, Linear, ReLU\n",
+        "from torch_geometric.utils import remove_self_loops, add_self_loops\n",
+        "class SAGEConv(MessagePassing):\n",
+        "    def __init__(self, in_channels, out_channels):\n",
+        "        super(SAGEConv, self).__init__(aggr='max') #  \"Max\" aggregation.\n",
+        "        self.lin = torch.nn.Linear(in_channels, out_channels)\n",
+        "        self.act = torch.nn.ReLU()\n",
+        "        self.update_lin = torch.nn.Linear(in_channels + out_channels, in_channels, bias=False)\n",
+        "        self.update_act = torch.nn.ReLU()\n",
+        "        \n",
+        "    def forward(self, x, edge_index):\n",
+        "        # x has shape [N, in_channels]\n",
+        "        # edge_index has shape [2, E]\n",
+        "        \n",
+        "        \n",
+        "        edge_index, _ = remove_self_loops(edge_index)\n",
+        "        edge_index, _ = add_self_loops(edge_index, num_nodes=x.size(0))\n",
+        "        \n",
+        "        \n",
+        "        return self.propagate(edge_index, size=(x.size(0), x.size(0)), x=x)\n",
+        "\n",
+        "    def message(self, x_j):\n",
+        "        # x_j has shape [E, in_channels]\n",
+        "\n",
+        "        x_j = self.lin(x_j)\n",
+        "        x_j = self.act(x_j)\n",
+        "        \n",
+        "        return x_j\n",
+        "\n",
+        "    def update(self, aggr_out, x):\n",
+        "        # aggr_out has shape [N, out_channels]\n",
+        "        new_embedding = torch.cat([aggr_out, x], dim=1)\n",
+        "        \n",
+        "        new_embedding = self.update_lin(new_embedding)\n",
+        "        new_embedding = self.update_act(new_embedding)\n",
+        "        \n",
+        "        return new_embedding"
       ],
       "execution_count": 0,
       "outputs": []
