Implement the NGCF MessagePassing layer

--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -80,7 +80,7 @@
         "drive.mount('/content/drive')\n",
         "data_path = './drive/My Drive/RP_data'"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
         "dataReader = DataReader(data_path, 10)\n",
         "dataReader.sample()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
         "\n",
         "1. Implement the NGCF model\n",
         "  1. Create a user-item interaction graph from our data.\n",
-        "  1. The message passing/aggregation can be done in matrix form for each step l. For this, we have to compute the adjecency matrix.\n",
+        "  1. Create a NGCF Layer that can be used to perform a MessagePassing step.\n",
         "1. Train all the parameters\n",
         "  1. Construct the matrices W1_l, W2_l and E_l for each step l, initialize them with the Xavier Initializer.\n",
         "  1. Sample a batch from the training data. Apply L steps of message passing, and save all the matrices W1_{1..L}, W2_{1..L}, E_{1..L}, repeat until all training data are sampled once.\n",
@@ -257,7 +257,10 @@
         "  1. Compute the recall and normalized discounted cumulative gain (ndgc)\n",
         "\n",
         "Since we have to compare results for step l, and the final embeddings are calculated by concatenation over the steps, we can simply perform all L steps (4 in this case), and then do the analysis over subsets of the W1 and W2 matrices.\n",
-        "\n"
+        "\n",
+        "Hyperparameters to consider:\n",
+        " - Negative slope of NGCFLayer#LeakyReLU\n",
+        " - ...\n"
       ]
     },
     {
@@ -316,7 +319,7 @@
       "source": [
         "pip install torch===1.2.0 torchvision===0.4.0 -f https://download.pytorch.org/whl/torch_stable.html"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +363,7 @@
         "# we use torch version 1.2.0 instead of the latest due to dependency errors\n",
         "print(torch.__version__)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +394,7 @@
         "!pip install torch-spline-conv==1.1.0\n",
         "!pip install torch-geometric==1.3.2"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +509,7 @@
         "# verify that torch geometric is imported, should be 1.3.2\n",
         "print(torch_geometric.__version__)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +598,7 @@
         "print(data.contains_isolated_nodes())\n",
         "print(data.contains_self_loops())"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,11 +695,11 @@
       "metadata": {
         "id": "DxRyv2Lh3pg4",
         "colab_type": "code",
+        "outputId": "a371358f-f58f-40e3-93cf-7d2559311eab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "a371358f-f58f-40e3-93cf-7d2559311eab"
+        }
       },
       "source": [
         "# set initial weight\n",
@@ -710,7 +713,7 @@
         "print(ncfg_weights.keys())\n",
         "print(len(ncfg_weights['user_embedding']))"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,19 +739,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8fbSwP8zEsbI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from torch_geometric.nn import MessagePassing"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "KDlCsjl7Spjl",
@@ -760,7 +750,13 @@
         "\n",
         "$m_{u \\leftarrow i} = \\dfrac{1}{\\sqrt{|N_u||N_i|}} (W_1 e_i + W_2(e_i \\odot e_u))$\n",
         "\n",
-        "Where $N_u, N_i$ are the first hop neighbors of $u$ and $i$, $W_1, W_2$ are trainable weight matrices to distill useful information for propagation, and $e_i$ and $e_u$ are embeddings of the users and items."
+        "Where $N_u, N_i$ are the first hop neighbors of $u$ and $i$, $W_1, W_2$ are trainable weight matrices to distill useful information for propagation, and $e_i$ and $e_u$ are embeddings of the users and items.\n",
+        "\n",
+        "The embedding for a user (or item) is updated through message aggregation as \n",
+        "\n",
+        "$e_u^{(l)} = LeakyReLU(m_{u \\leftarrow u} + \\sum_{i \\in N_u} m_{u \\leftarrow i})$\n",
+        "\n",
+        "If the graph is constructed properly, this means that this simply a summation over all edges (when selfloops are included), followed by a LeakyReLU activiation."
       ]
     },
     {
@@ -771,47 +767,42 @@
         "colab": {}
       },
       "source": [
-        "# this is a direct copy paste from https://towardsdatascience.com/hands-on-graph-neural-networks-with-pytorch-pytorch-geometric-359487e221a8\n",
-        "# it can probably be deleted as a whole, but I copied it here as inspiration\n",
-        "# todo: update according to our own criteria\n",
-        "\n",
-        "from torch.nn import Sequential as Seq, Linear, ReLU\n",
+        "from torch.nn import LeakyReLU, Linear, MessagePassing\n",
         "from torch_geometric.utils import remove_self_loops, add_self_loops\n",
-        "class SAGEConv(MessagePassing):\n",
-        "    def __init__(self, in_channels, out_channels):\n",
-        "        super(SAGEConv, self).__init__(aggr='max') #  \"Max\" aggregation.\n",
-        "        self.lin = torch.nn.Linear(in_channels, out_channels)\n",
-        "        self.act = torch.nn.ReLU()\n",
-        "        self.update_lin = torch.nn.Linear(in_channels + out_channels, in_channels, bias=False)\n",
-        "        self.update_act = torch.nn.ReLU()\n",
-        "        \n",
-        "    def forward(self, x, edge_index):\n",
-        "        # x has shape [N, in_channels]\n",
-        "        # edge_index has shape [2, E]\n",
-        "        \n",
-        "        \n",
-        "        edge_index, _ = remove_self_loops(edge_index)\n",
-        "        edge_index, _ = add_self_loops(edge_index, num_nodes=x.size(0))\n",
-        "        \n",
-        "        \n",
-        "        return self.propagate(edge_index, size=(x.size(0), x.size(0)), x=x)\n",
         "\n",
-        "    def message(self, x_j):\n",
-        "        # x_j has shape [E, in_channels]\n",
+        "class NGCFLayer(MessagePassing):\n",
+        "  def __init__(self, in_channels, out_channels):\n",
+        "    super(NGCFLayer, self).__init__(aggr='add') # Summation as aggregation\n",
+        "    # The W1 matrix\n",
+        "    self.lin1 = Linear(bias=false)\n",
+        "    # The W2 matrix\n",
+        "    self.lin2 = Linear(bias=false)\n",
+        "    self.act = LeakyReLU()\n",
         "\n",
-        "        x_j = self.lin(x_j)\n",
-        "        x_j = self.act(x_j)\n",
-        "        \n",
-        "        return x_j\n",
+        "  def forward(self, x, edge_index):\n",
+        "    # Add self loops\n",
+        "    edge_index, _ = remove_self_loops(edge_index)\n",
+        "    edge_index, _ = add_self_loops(edge_index, num_nodes=x.size(0))\n",
         "\n",
-        "    def update(self, aggr_out, x):\n",
-        "        # aggr_out has shape [N, out_channels]\n",
-        "        new_embedding = torch.cat([aggr_out, x], dim=1)\n",
-        "        \n",
-        "        new_embedding = self.update_lin(new_embedding)\n",
-        "        new_embedding = self.update_act(new_embedding)\n",
-        "        \n",
-        "        return new_embedding"
+        "    # Compute normalization\n",
+        "    row, col = edge_index\n",
+        "    deg = degree(row, x.size(0), dtype=x.dtype)\n",
+        "    deg_inv_dqrt = deg.pow(-0.5)\n",
+        "    norm = deg_inv_sqrt[row] * deg_inv_sqrt[col]\n",
+        "\n",
+        "    return self.propagate(edge_index, size=(x.size(0), x.size(0)), x=x, norm=norm)\n",
+        "  \n",
+        "  def message(self, x_i, x_j, norm):\n",
+        "    # Construct message\n",
+        "    message = self.lin1(x_j)\n",
+        "    # Only add the second term if it is not a self loop\n",
+        "    if x_i.data_ptr() != x_j.data_ptr():\n",
+        "      message += self.lin2(torch.mul(x_i, x_j))\n",
+        "    return message\n",
+        "\n",
+        "  def update(self, aggr_out):\n",
+        "    # Return the LeakyReLU result\n",
+        "    return self.act(aggr_out)"
       ],
       "execution_count": 0,
       "outputs": []
